tests/snapshots/tests__ast@return.snap
---
source: tests/tests.rs
expression: "format!(\"{:#?}\", tree)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Class {
                name: "App",
            },
            children: [
                AbstractSyntaxTree {
                    node: Callable {
                        result_type: Void,
                        name: "Main",
                        arguments: [],
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: If {
                                condition: Literal {
                                    typ: (),
                                    value: "false",
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: Return {
                                        value: None,
                                    },
                                    children: [],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: ElseIf {
                                condition: Literal {
                                    typ: (),
                                    value: "false",
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: Return {
                                        value: None,
                                    },
                                    children: [],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: Else,
                            children: [
                                AbstractSyntaxTree {
                                    node: Return {
                                        value: None,
                                    },
                                    children: [],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
}
