tests/snapshots/tests__ast@scopes.snap
---
source: tests/tests.rs
expression: "format!(\"{:#?}\", tree)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Class {
                name: "App",
            },
            children: [
                AbstractSyntaxTree {
                    node: Callable {
                        result_type: Int,
                        name: "f",
                        arguments: [
                            Var {
                                name: "x",
                                typ: Int,
                            },
                        ],
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Return {
                                value: Some(
                                    BinaryOp {
                                        typ: (),
                                        left: Variable {
                                            typ: (),
                                            name: "x",
                                        },
                                        op: Plus,
                                        right: Literal {
                                            typ: (),
                                            value: "5",
                                        },
                                    },
                                ),
                            },
                            children: [],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: Callable {
                        result_type: Void,
                        name: "Main",
                        arguments: [],
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Declaration {
                                typ: Int,
                                name: "x",
                                expression: Some(
                                    Literal {
                                        typ: (),
                                        value: "0",
                                    },
                                ),
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: Declaration {
                                typ: Int,
                                name: "b",
                                expression: Some(
                                    Literal {
                                        typ: (),
                                        value: "1",
                                    },
                                ),
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: If {
                                condition: BinaryOp {
                                    typ: (),
                                    left: Variable {
                                        typ: (),
                                        name: "x",
                                    },
                                    op: Greater,
                                    right: Variable {
                                        typ: (),
                                        name: "b",
                                    },
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: If {
                                        condition: BinaryOp {
                                            typ: (),
                                            left: BinaryOp {
                                                typ: (),
                                                left: Variable {
                                                    typ: (),
                                                    name: "x",
                                                },
                                                op: Plus,
                                                right: Literal {
                                                    typ: (),
                                                    value: "1",
                                                },
                                            },
                                            op: Greater,
                                            right: Variable {
                                                typ: (),
                                                name: "b",
                                            },
                                        },
                                    },
                                    children: [],
                                },
                                AbstractSyntaxTree {
                                    node: Else,
                                    children: [],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: ElseIf {
                                condition: BinaryOp {
                                    typ: (),
                                    left: Variable {
                                        typ: (),
                                        name: "x",
                                    },
                                    op: Less,
                                    right: Variable {
                                        typ: (),
                                        name: "b",
                                    },
                                },
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: Else,
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: While {
                                condition: Literal {
                                    typ: (),
                                    value: "true",
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: If {
                                        condition: BinaryOp {
                                            typ: (),
                                            left: Variable {
                                                typ: (),
                                                name: "x",
                                            },
                                            op: Equal,
                                            right: Literal {
                                                typ: (),
                                                value: "9",
                                            },
                                        },
                                    },
                                    children: [
                                        AbstractSyntaxTree {
                                            node: Expression {
                                                expression: Increment {
                                                    typ: (),
                                                    expression: Variable {
                                                        typ: (),
                                                        name: "x",
                                                    },
                                                    postfix: true,
                                                },
                                            },
                                            children: [],
                                        },
                                    ],
                                },
                                AbstractSyntaxTree {
                                    node: ElseIf {
                                        condition: BinaryOp {
                                            typ: (),
                                            left: Variable {
                                                typ: (),
                                                name: "x",
                                            },
                                            op: Equal,
                                            right: Literal {
                                                typ: (),
                                                value: "10",
                                            },
                                        },
                                    },
                                    children: [
                                        AbstractSyntaxTree {
                                            node: Break,
                                            children: [],
                                        },
                                    ],
                                },
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: Assign {
                                            typ: (),
                                            name: "x",
                                            value: MethodCall {
                                                typ: (),
                                                object: This {
                                                    typ: (),
                                                },
                                                name: "f",
                                                arguments: [
                                                    BinaryOp {
                                                        typ: (),
                                                        left: Variable {
                                                            typ: (),
                                                            name: "x",
                                                        },
                                                        op: Plus,
                                                        right: Literal {
                                                            typ: (),
                                                            value: "1",
                                                        },
                                                    },
                                                ],
                                            },
                                        },
                                    },
                                    children: [],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: For {
                                initializer: Some(
                                    Declaration {
                                        typ: Int,
                                        name: "i",
                                        expression: Some(
                                            Literal {
                                                typ: (),
                                                value: "2",
                                            },
                                        ),
                                    },
                                ),
                                condition: Some(
                                    BinaryOp {
                                        typ: (),
                                        left: Variable {
                                            typ: (),
                                            name: "i",
                                        },
                                        op: Less,
                                        right: Literal {
                                            typ: (),
                                            value: "10",
                                        },
                                    },
                                ),
                                increment: Some(
                                    Increment {
                                        typ: (),
                                        expression: Variable {
                                            typ: (),
                                            name: "i",
                                        },
                                        postfix: true,
                                    },
                                ),
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: BinaryOp {
                                            typ: (),
                                            left: Variable {
                                                typ: (),
                                                name: "x",
                                            },
                                            op: AssignAdd,
                                            right: Literal {
                                                typ: (),
                                                value: "2",
                                            },
                                        },
                                    },
                                    children: [],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: Return {
                                value: None,
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
