tests/snapshots/tests__correct_cfg@classes.snap
---
source: tests/tests.rs
expression: "format!(\"{:#?}\", cfg)"
---
ControlFlowGraph {
    blocks: [
        BasicBlock {
            id: 0,
            instructions: [
                LoadParam {
                    dest: Register(
                        1,
                    ),
                    index: 0,
                },
                GetField {
                    dest: Register(
                        2,
                    ),
                    object: Value(
                        Register(
                            1,
                        ),
                    ),
                    offset: 0,
                },
                BinaryOp {
                    dest: Register(
                        3,
                    ),
                    left: Value(
                        Register(
                            2,
                        ),
                    ),
                    op: Plus,
                    right: Constant(
                        "1",
                    ),
                },
                PutField {
                    object: Value(
                        Register(
                            1,
                        ),
                    ),
                    offset: 0,
                    value: Value(
                        Register(
                            3,
                        ),
                    ),
                },
            ],
            terminator: Some(
                Return(
                    Some(
                        Value(
                            Register(
                                2,
                            ),
                        ),
                    ),
                ),
            ),
            predecessors: [],
            successors: [],
        },
        BasicBlock {
            id: 1,
            instructions: [
                LoadParam {
                    dest: Register(
                        4,
                    ),
                    index: 0,
                },
                StackAlloc {
                    slot: StackSlot(
                        1,
                    ),
                },
                AllocObject {
                    dest: Register(
                        5,
                    ),
                    class_name: "Node",
                },
                LoadConst {
                    dest: Register(
                        6,
                    ),
                    value: "5",
                },
                PutField {
                    object: Value(
                        Register(
                            5,
                        ),
                    ),
                    offset: 0,
                    value: Value(
                        Register(
                            6,
                        ),
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        1,
                    ),
                    value: Value(
                        Register(
                            5,
                        ),
                    ),
                },
                StackLoad {
                    dest: Register(
                        7,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                Call {
                    dest: Register(
                        8,
                    ),
                    block: 0,
                    arguments: [
                        Value(
                            Register(
                                7,
                            ),
                        ),
                    ],
                },
                StackLoad {
                    dest: Register(
                        9,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                Call {
                    dest: Register(
                        10,
                    ),
                    block: 0,
                    arguments: [
                        Value(
                            Register(
                                9,
                            ),
                        ),
                    ],
                },
            ],
            terminator: Some(
                Return(
                    None,
                ),
            ),
            predecessors: [],
            successors: [],
        },
    ],
    entry_block: 1,
}
