tests/snapshots/tests__incorrect_error@return.snap
---
source: tests/tests.rs
expression: error
---
Not all code paths return a value in function 'Main'
