tests/snapshots/tests__parser@classes.snap
---
source: tests/tests.rs
expression: "format!(\"{:#?}\", tree)"
---
SyntaxTree {
    node: File,
    children: [
        SyntaxTree {
            node: Class {
                name: "Node",
            },
            children: [
                SyntaxTree {
                    node: Line {
                        value: "int counter = 5",
                    },
                    children: [],
                },
                SyntaxTree {
                    node: Function {
                        result_type: "int",
                        name: "Increment",
                        arguments: "",
                    },
                    children: [
                        SyntaxTree {
                            node: Line {
                                value: "return this.counter++",
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
        SyntaxTree {
            node: Class {
                name: "App",
            },
            children: [
                SyntaxTree {
                    node: Function {
                        result_type: "void",
                        name: "Main",
                        arguments: "",
                    },
                    children: [
                        SyntaxTree {
                            node: Line {
                                value: "Node node = new Node()",
                            },
                            children: [],
                        },
                        SyntaxTree {
                            node: Line {
                                value: "node.Increment()",
                            },
                            children: [],
                        },
                        SyntaxTree {
                            node: Line {
                                value: "node.Increment()",
                            },
                            children: [],
                        },
                        SyntaxTree {
                            node: Line {
                                value: "return",
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
